syntax = "proto3";

enum ServerError {
	OK = 0;

	ACCOUNT_EXIST = 1;
	ACCOUNT_OR_PASSWORD_ERROR = 2;

	NOT_FOUND = 3;

	SERVER_NOT_READY = 4;

	FREQUENT_OPERATION = 5;

	INVALID_TOKEN = 6;

	OBJECT_NOT_FOUND = 7;

	PLAYING = 8;

	MATCH_FAILED = 9;

	CREATE_ROOM_PROCESS_FAILED = 10;

	TIMEOUT = 11;

	CONNECT_ERROR = 12;
	DISCONNECTED = 13;

	CREATE_ERROR = 14;

	AUTH_FAILED = 15;
}